Ensures Firefox uses the background image behind the game.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 body  {
   background-image: url('../assets/images/background2.jpg');
-  background-repeat: round;
+  background-repeat: repeat;
   // background-size: 99vw 99vh;
   display: block;
   font-family: Arial;
